--- a/index.html
+++ b/index.html
@@ -112,12 +112,13 @@
 							<a href="bigimages/shaders/img5.png" data-caption="Normal Mapping"><img src="images/shaders/img5.png" /></a>
 						</div>
 						<p style="font-size: large; text-align: left;">
-							An ocean storm shader made in Unity with the Universal Render
-							Pipeline. I implemented the trochoidal/gerstner algorithm
-							for the waves, with multiple other features in shader graph
-							to produce a realistic water visual. There are also
-							accompanying effects created with HLSL and the VFX graph to
-							create the ocean storm diorama.
+							An ocean storm shaders diorama made in Unity with the
+							Universal Render Pipeline. I implemented the
+							trochoidal/gerstner algorithm for the waves, with
+							multiple other features in shader graph to produce a
+							realistic water visual. There are also accompanying
+							effects created with HLSL and the VFX graph to create
+							the ocean storm diorama.
 							<br><a href="https://github.com/Joe34441/Ocean-Storm-Shader">Project</a>
 						</p>
 					</article>
